# EVEmu-rs

./: Cargo.toml  README.md
eve-common/: Cargo.toml  README.md
eve-dbtool/: Cargo.toml  README.md
eve-dbtool/src/: main.rs
eve-dbtool/src/command/: dungeon.rs  index.rs  install.rs  mod.rs  seed.rs
eve-dbtool/src/internal/: config.rs  dboperate.rs  mod.rs  utils.rs
eve-patcher/: Cargo.toml  README.md
eve-patcher/src/: main.rs
eve-server/: Cargo.toml
eve-utils/: Cargo.toml  README.md
ref/: README.md
ref/sql/: README.md  dump.sh
ref/sql/old_data/: delete_character.sql
