[package]
    name = "eve-dbtool"
    version = "0.1.0"
    edition = "2021"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    serde_json = "1.0"
    clap = { version = "4.4", features = ["derive"] }
    flate2 = "1.0"
    sqlx = { version = "0.7", features = ["runtime-tokio", "all-databases"] }
    tokio = { version = "1", features = ["full"] }
